[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hound-osint"
version = "1.0.0"
description = "Email OSINT — find accounts across 40+ platforms"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "flask>=3.0",
]

[project.scripts]
hound = "hound.cli:main"

[tool.setuptools.packages.find]
where = ["."]
